# Amari-mcp

./: .gitignore  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  claude-code-integration.md  setup-claude-code.sh  test.sh
.cargo/: audit.toml
.claude-code/commands/: start-mcp.md  test-mcp.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: claude-code-setup.md
examples/: claude-code-basic.json  claude-code-database.json  client_examples.py
manifests/: amari.toml
migrations/: 001_initial.sql  002_cayley_tables.sql
src/: config.rs  database.rs  lib.rs  main.rs  mcp_pmcp.rs  mcp_real.rs  mcp_stub.rs  server.rs  utils.rs
src/parser/: display.rs  docs.rs  features.rs  index.rs  items.rs  mod.rs  module_tree.rs  workspace.rs
src/tools/: api_search.rs  autodiff.rs  browse_docs.rs  cayley_precompute.rs  cayley_tables.rs  cellular_automata.rs  database.rs  dependency_graph.rs  feature_map.rs  geometric.rs  geometric_stub.rs  gpu.rs  info_geometry.rs  library_access.rs  mod.rs  module_overview.rs  reload.rs  tropical.rs  type_info.rs  usage_examples.rs
tests/: database_migration_test.rs  integration_test.rs
