[package]
name = "amari-mcp"
version = "0.2.0"
edition = "2021"
authors = ["Amari Contributors"]
license = "MIT OR Apache-2.0"
description = "Config-driven MCP server providing ground-truth API reference for Rust library ecosystems"
repository = "https://github.com/justinelliottcobb/amari-mcp"
homepage = "https://github.com/justinelliottcobb/amari-mcp"
keywords = ["mcp", "api-reference", "rust-analyzer", "developer-tools"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# MCP framework
pmcp = "1.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Rust source parsing
syn = { version = "2.0", features = ["full", "parsing", "visit", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# Filesystem
walkdir = "2.4"

# Search
regex = "1.10"

# Parallelism
rayon = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

[lib]
name = "amari_mcp"
path = "src/lib.rs"

[[bin]]
name = "amari-mcp"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
insta = { version = "1.34", features = ["json"] }

[workspace]
# Empty workspace table to prevent this from being part of parent workspace
